# loan-api

./: .env_example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
loanmanagement/: settings.py  urls.py
loanmanagement/testing/: generic_test_case.py  helpers.py
loans/: models.py  routes.py  serializers.py  signals.py  validators.py  views.py
loans/management/commands/: create_initial_data.py
loans/migrations/: 0001_initial.py  0002_loan_is_already_paid.py  0003_alter_loan_amount_alter_loan_monthly_interest_rate_and_more.py  0004_alter_loanpayment_loan.py
loans/models/: __init__.py  loans.py
loans/models/tests/: test_loans.py
loans/services/: balance_calculator.py  common_services.py
loans/services/tests/: test_balance_calculator.py
loans/views/: __init__.py  loans.py
loans/views/tests/: test_loans.py  test_payments.py
