[project]
name = "desafio-matera-credito"
version = "1"
requires-python = ">=3.9"
dependencies = [
    "django==4.2.20",
    "djangorestframework==3.15.2",
    "drf-yasg==1.21.8",
    "numpy==1.24.3",
    "django-cors-headers==3.10.0",
    "djangorestframework-simplejwt==5.5.0",
    "psycopg2-binary==2.8.6",
    "psycopg2==2.9.1",
    "python-dateutil==2.9.0",
    "pip-tools"
]

[tool.setuptools]
py-modules = []
